--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 #game {
+/* add style */
 text-decoration-color: white;
 padding: 250px;
 font-style: italic;
@@ -8,10 +9,10 @@ text-align: center;
 }
 
 body, html {
+    /* add img & center and scale the image nicely */
     height: 100%;
     margin: 0;
     background-image: url("https://image.freepik.com/free-vector/blue-abstract-background-with-mandalas_1159-956.jpg");
-    /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
